# Tinkers-AI-

./: .gitignore  README.md  index.html  manage_agents.py  pyproject.toml  web.js  websocket_manager.py  websocket_server.py
.github/: copilot-instructions.md
backend/: main.py  manage_agents.py  pyproject.toml
backend/core/: openai.py
backend/routes/: main.py
backend/routes/agenda/: model.py  prompts.py  routes.py
backend/routes/conversation/: agent.py  prompts.py  routes.py
backend/tests/: test_transcribe_endpoint.py
docs/: architecture_design.md  implementation_plan.md  poc_definition.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/.copilot/: frontend-global.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agenda/: page.tsx
frontend/src/app/agenda/[id]/: page.tsx
frontend/src/app/api/accepted-agenda/: route.ts
frontend/src/app/api/agenda/: route.ts
frontend/src/app/api/agendas/: route.ts
frontend/src/app/api/meetings/: route.ts
frontend/src/app/form/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/meeting/: MeetingContent.tsx  page.tsx
frontend/src/components/: ChatBot.tsx
frontend/src/components/charts/: EngagementChart.tsx  MeetingsChart.tsx
frontend/src/components/minimal-tiptap/: MinimalTiptapEditor.tsx
frontend/src/components/minimal-tiptap/components/: bubble-menu.tsx  section-five.tsx  section-four.tsx  section-two.tsx
frontend/src/components/ui/: badge.tsx  select.tsx
frontend/src/data/mocked/agendas/: 1745657811227.json
frontend/src/lib/: api.ts
(+33 files in other folders)
