[project]
name = "facilitator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "openai-agents>=0.0.13",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.1",
    "websockets>=15.0.1",
]
